--- a/notebook_101.ipynb
+++ b/notebook_101.ipynb
@@ -46,9 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-18T11:05:00.026309Z",
+     "iopub.status.busy": "2026-02-18T11:05:00.026042Z",
+     "iopub.status.idle": "2026-02-18T11:05:01.243495Z",
+     "shell.execute_reply": "2026-02-18T11:05:01.242499Z",
+     "shell.execute_reply.started": "2026-02-18T11:05:00.026290Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available kernels:\n",
+      "  python3    /home/emirhankumus/.pyenv/versions/3.12.9/envs/workintech/share/jupyter/kernels/python3\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter kernelspec list"
    ]
@@ -62,9 +79,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-18T11:05:11.944265Z",
+     "iopub.status.busy": "2026-02-18T11:05:11.943730Z",
+     "iopub.status.idle": "2026-02-18T11:05:12.062778Z",
+     "shell.execute_reply": "2026-02-18T11:05:12.061722Z",
+     "shell.execute_reply.started": "2026-02-18T11:05:11.944237Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/emirhankumus/code/emirhankumus/data-notebook\n"
+     ]
+    }
+   ],
    "source": [
     "!pwd"
    ]
@@ -128,16 +161,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Veri Bilimi Yolculuğu\n",
+    "Bu projede **Jupyter Notebook** temellerini öğreniyorum.\n",
+    "Daha fazla bilgi için [buraya tıklayabilirsin](https://www.markdownguide.org)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "❓ Aşağıdaki hücreye biraz Python kodu yaz. Örneğin \"Hello from Jupyter\" yazdırarak (print) başlayabilirsin. Sonucu görmek için hücreyi çalıştır."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-18T11:20:02.116033Z",
+     "iopub.status.busy": "2026-02-18T11:20:02.115678Z",
+     "iopub.status.idle": "2026-02-18T11:20:02.123655Z",
+     "shell.execute_reply": "2026-02-18T11:20:02.122273Z",
+     "shell.execute_reply.started": "2026-02-18T11:20:02.116006Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello from Jupyter\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: biraz Python kodu yaz!"
+    "msg = \"Hello from Jupyter\"\n",
+    "print(msg)"
    ]
   },
   {
@@ -240,8 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-18T12:11:01.717116Z",
+     "iopub.status.busy": "2026-02-18T12:11:01.716083Z",
+     "iopub.status.idle": "2026-02-18T12:11:01.800146Z",
+     "shell.execute_reply": "2026-02-18T12:11:01.799026Z",
+     "shell.execute_reply.started": "2026-02-18T12:11:01.717085Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -257,8 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-18T12:11:37.616209Z",
+     "iopub.status.busy": "2026-02-18T12:11:37.615899Z",
+     "iopub.status.idle": "2026-02-18T12:11:37.633961Z",
+     "shell.execute_reply": "2026-02-18T12:11:37.632898Z",
+     "shell.execute_reply.started": "2026-02-18T12:11:37.616190Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from hello import hello_world\n",
@@ -282,11 +357,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-18T12:13:21.750482Z",
+     "iopub.status.busy": "2026-02-18T12:13:21.749646Z",
+     "iopub.status.idle": "2026-02-18T12:13:21.772365Z",
+     "shell.execute_reply": "2026-02-18T12:13:21.771055Z",
+     "shell.execute_reply.started": "2026-02-18T12:13:21.750444Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello from hello.py'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cumle"
+    "sentence"
    ]
   },
   {
@@ -307,8 +401,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-18T12:14:59.346017Z",
+     "iopub.status.busy": "2026-02-18T12:14:59.345083Z",
+     "iopub.status.idle": "2026-02-18T12:14:59.367856Z",
+     "shell.execute_reply": "2026-02-18T12:14:59.366577Z",
+     "shell.execute_reply.started": "2026-02-18T12:14:59.345990Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from nbresult import ChallengeResult\n",
@@ -321,9 +423,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-18T12:15:09.751666Z",
+     "iopub.status.busy": "2026-02-18T12:15:09.750767Z",
+     "iopub.status.idle": "2026-02-18T12:15:10.171783Z",
+     "shell.execute_reply": "2026-02-18T12:15:10.170603Z",
+     "shell.execute_reply.started": "2026-02-18T12:15:09.751643Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.12.9, pytest-8.3.4, pluggy-1.5.0 -- /home/emirhankumus/.pyenv/versions/3.12.9/envs/workintech/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /home/emirhankumus/code/emirhankumus/data-notebook/tests\n",
+      "plugins: anyio-4.8.0, typeguard-4.4.2\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 2 items\n",
+      "\n",
+      "test_import_hello.py::TestImportHello::test_method_returns_a_string \u001b[32mPASSED\u001b[0m\u001b[32m [ 50%]\u001b[0m\n",
+      "test_import_hello.py::TestImportHello::test_method_returns_correct_sentence \u001b[32mPASSED\u001b[0m\u001b[32m [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.02s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\n",
+      "\n",
+      "💯 You can commit your code:\n",
+      "\n",
+      "\u001b[1;32mgit\u001b[39m add tests/import_hello.pickle\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed import_hello step'\u001b[39m\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m push origin master\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(result.check())"
    ]
@@ -419,9 +558,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
